[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Todot/Src/Scripts/Todo.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Roboto-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="Todo" type="Control" groups=[
"Todo",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -744.0
margin_bottom = -565.0
rect_min_size = Vector2( 280, 45 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Todo" type="Button" parent="."]
margin_left = 2.0
margin_right = 278.0
margin_bottom = 40.0
rect_min_size = Vector2( 276, 40 )
focus_mode = 0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Todo"]
margin_left = 5.0
margin_right = 255.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Todo" to="." method="_on_Todo_button_down"]
[connection signal="mouse_entered" from="Todo" to="." method="_on_Todo_mouse_entered"]
[connection signal="mouse_exited" from="Todo" to="." method="_on_Todo_mouse_exited"]
